# odisseo-signal-atlas

./: .env.example  .env.local.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 0001-core-architecture.md  0002-environment-and-secrets.md  0003-public-branding-and-canonical-links.md  0004-cli-first-local-execution.md  0005-time-sliced-query-history.md  0006-sequential-repo-inspection.md
scripts/: run_hunt.py
src/odisseo_signal_atlas/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  exporters.py  github_client.py  logging_utils.py  models.py  normalizers.py  pipeline.py  query_builder.py  query_state.py  ranker.py  repo_inspector.py  x_client.py
tests/: test_cli.py  test_config.py  test_exporters.py  test_github_client.py  test_logging_utils.py  test_normalizers.py  test_pipeline.py  test_query_builder.py  test_ranker.py  test_repo_inspector.py  test_run_hunt_script.py  test_x_client.py
