[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odisseo-signal-atlas"
version = "0.1.0"
description = "State-of-the-art multilingual GitHub repository discovery from X, GitHub, and frontier engineering signals."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Ulisses Flores"},
]
license = {text = "MIT"}
keywords = [
  "github-discovery",
  "multilingual-search",
  "x-api",
  "mcp",
  "agents",
  "osint",
  "repo-ranking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "httpx>=0.28,<1",
  "python-dotenv>=1.0,<2",
  "rich>=13.9,<14",
  "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.11,<0.12",
]

[project.scripts]
odisseo-atlas = "odisseo_signal_atlas.cli:main"

[project.urls]
Homepage = "https://ulissesflores.com"
Documentation = "https://ulissesflores.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
odisseo_signal_atlas = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q --cov=odisseo_signal_atlas --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["odisseo_signal_atlas"]

[tool.coverage.report]
fail_under = 85
omit = ["src/odisseo_signal_atlas/__main__.py"]
skip_empty = true
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
packages = ["odisseo_signal_atlas"]
